--- a/build.gradle
+++ b/build.gradle
@@ -17,20 +17,25 @@ buildscript {
     }
 }
 
-apply plugin: 'forge'
 apply plugin: 'kotlin'
+apply plugin: 'forge'
 
 version = "1.0"
 group= "lingerloot" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "LingeringLoot"
+archivesBaseName = "LingeringLoot-1.7.10"
 
 minecraft {
     version = "1.7.10-10.13.4.1558-1.7.10"
     runDir = "eclipse"
 }
 
+configurations {
+    shade
+    compile.extendsFrom shade
+}
+
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    shade "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     // you may put jars on which you depend on in ./libs
     // or you may define them like so..
     //compile "some.group:artifact:version:classifier"
@@ -68,6 +73,21 @@ processResources
 repositories {
     mavenCentral()
 }
+
+jar {
+    // Shading
+    configurations.shade.each { dep ->
+        from(project.zipTree(dep)){
+            exclude 'META-INF', 'META-INF/**'
+        }
+    }
+}
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
+}
+
+minecraft {
+    // Kotlin shading
+    srgExtra [ "PK: kotlin lingeringlootkot/repack/kotlin" ]
+    srgExtra [ "PK: org/jetbrains/annotations lingeringlootkot/repack/annotations" ]
 }
