--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,10 @@ plugins {
 */
 version = "1.0"
 group = "lingerloot" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "LingeringLoot"
+archivesBaseName = "LingeringLoot-1.9"
 
 minecraft {
-    version = "1.8.9-11.15.1.1722"
+    version = "1.9-12.16.1.1887"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
