--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
-    ext.kotlin_version = '1.0.1-2'
+    ext.kotlin_version = '1.0.2'
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
@@ -14,42 +14,49 @@ buildscript {
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'forge'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 version = "1.0"
 group= "lingerloot" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "LingeringLoot-1.7.10"
 
-minecraft {
-    version = "1.7.10-10.13.4.1558-1.7.10"
-    runDir = "eclipse"
+configurations {
+    shadow
+    compile.extendsFrom shadow
 }
 
-configurations {
-    shade
-    compile.extendsFrom shade
+minecraft {
+    version = "1.7.10-10.13.4.1558-1.7.10"
+    runDir = "run"
 }
 
 dependencies {
-    shade "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+    shadow "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
+
+shadowJar {
+    archiveName = tasks.jar.archiveName
+    configurations = [project.configurations.shadow]
+    relocate 'kotlin', 'lingerlootkot.kotlin'
+    relocate 'org.jetbrains.annotations', 'lingerlootkot.jetbrains.annotations'
+//    classifier ''
+}
+
+jar {
+    configurations.shadow.each { dep ->
+        from(project.zipTree(dep)){
+            exclude 'META-INF', 'META-INF/**'
+        }
+    }
+}
+jar.dependsOn shadowJar
+jar.enabled = false
 
 processResources
 {
@@ -69,25 +76,4 @@ processResources
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
-}
-repositories {
-    mavenCentral()
-}
-
-jar {
-    // Shading
-    configurations.shade.each { dep ->
-        from(project.zipTree(dep)){
-            exclude 'META-INF', 'META-INF/**'
-        }
-    }
-}
-sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
-}
-
-minecraft {
-    // Kotlin shading
-    srgExtra [ "PK: kotlin lingeringlootkot/repack/kotlin" ]
-    srgExtra [ "PK: org/jetbrains/annotations lingeringlootkot/repack/annotations" ]
 }
