--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'kotlin'
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'com.github.johnrengelman.shadow'
 
-version = "1.0"
+version = "2.0"
 group = "lingerloot" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "LingeringLoot-1.9"
 
@@ -32,17 +32,25 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "stable_22"
+    mappings = "snapshot_20160523"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+}
+
+repositories {
+    maven {
+        url = 'http://unascribed.com/maven/releases'
+    }
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.unascribed:lambdanetwork:1.0.0'
 }
 
 shadowJar {
     relocate 'kotlin', 'lingerlootkot.kotlin'
     relocate 'org.jetbrains.annotations', 'lingerlootkot.jetbrains.annotations'
+    relocate 'com.unascribed.lambdanetwork', "lingerlootkot.unascribed.lambdanetwork"
     classifier ''
 }
 
@@ -52,8 +60,7 @@ reobf {
 
 tasks.build.dependsOn reobfShadowJar
 
-processResources
-{
+processResources {
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
