--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ apply plugin: 'kotlin'
 apply plugin: 'forge'
 apply plugin: 'com.github.johnrengelman.shadow'
 
-version = "2.0"
+version = "2.1"
 group= "lingerloot" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "LingeringLoot-1.7.10"
 
@@ -38,6 +38,7 @@ minecraft {
 
 dependencies {
     shadow "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    shadow files('libs/LambdaNetwork-i.0.1.jar')
 }
 
 shadowJar {
