--- a/src/main/resources/lingeringloot_at.cfg
+++ b/src/main/resources/lingeringloot_at.cfg
@@ -1,1 +1,2 @@
 protected net.minecraft.entity.item.EntityItem func_70289_a(Lnet/minecraft/entity/item/EntityItem;)Z # combineItems
+public net.minecraft.block.BlockPistonBase func_176319_a(Lnet/minecraft/world/World;Lnet/minecraft/util/math/BlockPos;Lnet/minecraft/util/EnumFacing;Z)Z # doMove
