--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // For those who want the bleeding edge
 buildscript {
-    ext.kotlin_version = '1.0.2'
+    ext.kotlin_version = '1.1.4-3'
+    //noinspection InconsistentLineSeparators,InconsistentLineSeparators,InconsistentLineSeparators
     repositories {
         jcenter()
         maven {
@@ -10,8 +11,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
     }
 }
@@ -21,10 +22,10 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 version = "3.1"
 group = "lingerloot" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "LingeringLoot-1.11.2"
+archivesBaseName = "LingeringLoot-1.12.2"
 
 minecraft {
-    version = "1.11.2-13.20.1.2386"
+    version = "1.12.2-14.23.0.2493"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -32,8 +33,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "stable_32"
-//    mappings = "snapshot_20170624"
+    mappings = "snapshot_20170926"
     makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
